# zero-shot

./: .gitignore  README.md  pyproject.toml  zeroshot.ipynb
.devcontainer/: Dockerfile  devcontainer.json
