[tool.poetry]
name = "zero-shot"
version = "0.1.0"
description = "Reproducing zero-shot results from ESM"
authors = ["Tilman Hoffbauer <turakar23@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fair-esm = "^2.0.0"
torch = "^2.1.2"
ipykernel = "^6.29.0"
ipywidgets = "^8.1.1"
tqdm = "^4.66.1"
numpy = "^1.26.3"
scipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
